cursive-bootstrap/tests/ui/E-TYP/E-TYP-2510.cursive
// RUN: compile-fail
// DIAG: E-TYP-2510
// SPEC: 5.3
// DESC: Accessing member not defined on opaque type's class

class Drawable {
    procedure draw(~) -> () { }
}

procedure use_opaque(x: opaque Drawable) -> () {
    x ~> unknown_method() //~ ERROR E-TYP-2510
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
